--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,19 @@
 </head>
 <body>
 <script>
+	const pressed = [];
+	const keyword = 'nickc'
+
+	window.addEventListener('keyup', (e) => {
+    pressed.push(e.key);
+    pressed.splice(-keyword.length - 1, pressed.length - keyword.length);
+    // console.log(-keyword.length - 1, pressed.length - keyword.length)
+    // console.log(pressed);
+    if(pressed.join('').includes(keyword)) {
+      console.log('match');
+      cornify_add();
+    } 
+	});
 </script>
 </body>
 </html>
